<ScrollView
   	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"            
    android:layout_height="match_parent"	        
    android:layout_below="@+id/llHeader"
    android:background="#ffffff">
    
  	<LinearLayout 
     android:id="@+id/llContent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"		       
     android:orientation="vertical"
     android:background="#ffffff">

     <EditText
         android:id="@+id/txtUsername"
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"
         android:ems="12"
         android:hint="@string/actCreateAccount_txtUsername" >

         <requestFocus />
     </EditText>
     
     <EditText
         android:id="@+id/txtPassword"
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"
         android:ems="12"
         android:inputType="textPassword"
         android:hint="@string/actCreateAccount_txtPassword" >

     </EditText>		        
     
     <TextView
         android:id="@+id/txtError"
         android:layout_width="match_parent"            
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="#cc0000" 		            
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"		            
         android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
         android:onClick="login"
         android:text="@string/actStartup_txtLogin"		           
         android:textColor="#ffffff" 
         android:background="@drawable/btn_orange"/>
     
     <com.chekaz.view.RobotoTextView
         android:id="@+id/txtAlready"
         android:layout_width="match_parent"            
         android:layout_height="wrap_content"
         android:text="@string/actLogin_txtAlready"
         android:textColor="#555555" 
         android:gravity="center"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"		            
         android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <TextView
         android:id="@+id/txtCreateAccount"
         android:layout_width="match_parent"            
         android:layout_height="wrap_content"
         android:text="@string/actCreateAccount_txtCreateAccount"
         android:textColor="#ff9900" 
         android:gravity="center"
         android:onClick="createAccount"
         android:clickable="true"
         android:layout_marginBottom="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium" />
      
  </LinearLayout>
  
</ScrollView>
  
