<ScrollView
        	xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"            
            android:layout_height="match_parent"	        
	        android:layout_below="@+id/llHeader"
	        android:background="#ffffff">
        
		    <LinearLayout 
		        android:id="@+id/llContent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"		       
		        android:orientation="vertical"
		        android:background="#ffffff">
		        
		        <com.chekaz.view.RobotoTextView
		            android:id="@+id/txtWelcome"
		            android:layout_width="match_parent"            
		            android:layout_height="wrap_content"
		            android:text="@string/actStartup_txtWelcome"
		            android:textColor="#555555" 
		            android:layout_marginTop="30dp"
		            android:layout_marginRight="30dp"
		            android:layout_marginLeft="30dp"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <Button
		            android:id="@+id/btnCreateAccount"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="40dp"
		            android:layout_marginLeft="40dp"
		            android:layout_marginTop="30dp"
		            android:text="@string/actStartup_btnCreateAccount"
		            android:onClick="showCreate"
		            android:textColor="#ffffff" 
		            android:background="@drawable/btn_orange"/>
		        
		        <Button
		            android:id="@+id/btnTryitOut"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="40dp"
		            android:layout_marginLeft="40dp"
		            android:layout_marginTop="20dp"
		            android:text="@string/actStartup_btnTryitOut"
		            android:textColor="#ffffff" 
		            android:onClick="showTry"
		            android:background="@drawable/btn_orange"/>
		        
		        <com.chekaz.view.RobotoTextView
		            android:id="@+id/txtAlready"
		            android:layout_width="match_parent"            
		            android:layout_height="wrap_content"
		            android:text="@string/actStartup_txtAlready"
		            android:textColor="#555555" 
		            android:gravity="center"
		            android:layout_marginRight="30dp"
		            android:layout_marginLeft="30dp"
		            android:layout_marginTop="30dp"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		        
		        <TextView
		            android:id="@+id/txtLogin"
		            android:layout_width="match_parent"            
		            android:layout_height="wrap_content"
		            android:text="@string/actStartup_txtLogin"
		            android:textColor="#ff9900" 
		            android:gravity="center"
		            android:textStyle="bold"
		            android:onClick="login"
		            android:clickable="true"
		            android:layout_marginBottom="30dp"
		            android:layout_marginRight="30dp"
		            android:layout_marginLeft="30dp"
		            android:layout_marginTop="10dp"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		        	
		        
		    </LinearLayout>        
</ScrollView>

