<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"             
        android:orientation="vertical"
        android:background="#ff9900" >

        <LinearLayout	        
	        android:id="@+id/llHeader"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"             
	        android:orientation="horizontal"
	        android:background="#cc6600" >

            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"                
                android:src="@drawable/ic_launcher" />
            
            <com.chekaz.view.RobotoTextView
	            android:id="@+id/txtInfo"
	            android:layout_width="match_parent"            
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/actStartupDialog_txtInfo"
	            android:textColor="#ffffff" 
	            android:textAppearance="@android:style/TextAppearance.Large"
	            android:textStyle="bold"
	            android:layout_margin="10dp"
	            	            
	             />
          
        </LinearLayout>

        <LinearLayout	        
	        android:id="@+id/llBad"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"             
	        android:orientation="horizontal"
	        >

            <ImageView
                android:id="@+id/imgSad"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"                               
                android:src="@drawable/ic_sad" />
            
            <com.chekaz.view.RobotoTextView
	            android:id="@+id/txtSad"
	            android:layout_width="match_parent"            
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/actStartupDialog_txtSad"
	            android:textColor="#ffffff" 
	            android:textAppearance="@android:style/TextAppearance.Small"            
	            android:layout_margin="10dp"
	            	            
	             />
          
        </LinearLayout>
        
        <LinearLayout	        
	        android:id="@+id/llHappy"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"             
	        android:orientation="horizontal"
	        >

            <ImageView
                android:id="@+id/imgHappy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"                             
                android:src="@drawable/ic_happy" />
            
            <com.chekaz.view.RobotoTextView
	            android:id="@+id/txtHappy"
	            android:layout_width="match_parent"            
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/actStartupDialog_txtHappy"
	            android:textColor="#ffffff" 
	            android:textAppearance="@android:style/TextAppearance.Small"            
	            android:layout_margin="10dp"
	            	            
	             />
          
        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/actStartupDialog_btnContinue"            
            android:textColor="#ffffff" 
            android:background="@drawable/btn_orange"/>   
        	
        
</LinearLayout>    
    
