<ScrollView
    		xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"            
            android:layout_height="match_parent"	        
	        android:layout_below="@+id/llHeader"
	        android:background="#ffffff">
        
		    <LinearLayout 
		        android:id="@+id/llContent"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"		       
		        android:orientation="vertical"
		        android:background="#ffffff">
		        
			    <LinearLayout 
			        android:id="@+id/llPlay"
			        android:layout_width="match_parent"
			        android:layout_margin="10dp"
			        android:layout_height="wrap_content"	        
			        android:orientation="horizontal">
			        
				        <ImageView
				            android:id="@+id/imgPlay"
				            android:layout_width="50dp"
				            android:layout_height="50dp" 
				            android:layout_margin="10dp"
				            android:layout_gravity="center_vertical"			            	                   
				            android:src="@drawable/ic_playfriends" />      
				        
				        <com.chekaz.view.RobotoTextView
				            android:id="@+id/txtPlay"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"	
				            android:layout_margin="10dp"		            
				            android:text="@string/actWelcome_txtPlay"
				            android:layout_gravity="center_vertical"
				            android:textAppearance="?android:attr/textAppearanceMedium"
				            android:textColor="#555555" />
	        	</LinearLayout>    
	        	
			    <LinearLayout 
			        android:id="@+id/llWatch"
			        android:layout_width="match_parent"
			        android:layout_margin="10dp"
			        android:layout_height="wrap_content"	        
			        android:orientation="horizontal">
			        
				        <ImageView
				            android:id="@+id/imgWatch"
				            android:layout_width="50dp"
				            android:layout_height="50dp" 
				            android:layout_margin="10dp"
				            android:layout_gravity="center_vertical"			            	                   
				            android:src="@drawable/ic_watch" />      
				        
				        <com.chekaz.view.RobotoTextView
				            android:id="@+id/txtWatch"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"	
				            android:layout_margin="10dp"		            
				            android:text="@string/actWelcome_txtWatch"
				            android:layout_gravity="center_vertical"
				            android:textAppearance="?android:attr/textAppearanceMedium"
				            android:textColor="#555555" />
	        	</LinearLayout>
	        	
			     <LinearLayout 
			        android:id="@+id/llTournament"
			        android:layout_width="match_parent"
			        android:layout_margin="10dp"
			        android:layout_height="wrap_content"	        
			        android:orientation="horizontal">
			        
				        <ImageView
				            android:id="@+id/imgTournament"
				            android:layout_width="50dp"
				            android:layout_height="50dp" 
				            android:layout_margin="10dp"
				            android:layout_gravity="center_vertical"			            	                   
				            android:src="@drawable/ic_tournament" />      
				        
				        <com.chekaz.view.RobotoTextView
				            android:id="@+id/txtTournament"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"	
				            android:layout_margin="10dp"		            
				            android:text="@string/actWelcome_txtTournament"
				            android:layout_gravity="center_vertical"
				            android:textAppearance="?android:attr/textAppearanceMedium"
				            android:textColor="#555555" />
	        	</LinearLayout>
	        	
			     <LinearLayout 
			        android:id="@+id/llRank"
			        android:layout_width="match_parent"
			        android:layout_margin="10dp"
			        android:layout_height="wrap_content"	        
			        android:orientation="horizontal">
			        
				        <ImageView
				            android:id="@+id/imgRank"
				            android:layout_width="50dp"
				            android:layout_height="50dp" 
				            android:layout_margin="10dp"
				            android:layout_gravity="center_vertical"			            	                   
				            android:src="@drawable/ic_rank" />      
				        
				        <com.chekaz.view.RobotoTextView
				            android:id="@+id/txtRank"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"	
				            android:layout_margin="10dp"		            
				            android:text="@string/actWelcome_txtRank"
				            android:layout_gravity="center_vertical"
				            android:textAppearance="?android:attr/textAppearanceMedium"
				            android:textColor="#555555" />
	        	</LinearLayout> 
	        	
			    <Button
		            android:id="@+id/btnStart"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="40dp"
		            android:layout_marginLeft="40dp"
		            android:layout_marginTop="30dp"
		            android:layout_marginBottom="30dp"
		            android:onClick="start"
		            android:text="@string/actWelcome_btnStart"
		            android:textColor="#ffffff" 
		            android:background="@drawable/btn_orange"/> 
		        
		    </LinearLayout>
		    
</ScrollView>

